Bug: fix overflow on chart

--- a/src/presentational/Chart.css
+++ b/src/presentational/Chart.css
@@ -7,6 +7,7 @@
 	flex-direction: column;
 	align-items: center;
 	box-sizing: border-box;
+	overflow-y: scroll;
 }
 
 .victory {
