--- a/src/presentational/ThemeBar.css
+++ b/src/presentational/ThemeBar.css
@@ -2,6 +2,8 @@
 	width: calc( 100% - 20px );
 	display: flex;
 	flex-direction: column;
+	height: auto;
+	min-height: 150px;
 }
 
 
